--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="Assets/style.css"/>
 
 </head>
 
@@ -67,7 +67,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
-    <script src="assets/app.js"></script>
+    <script src="Assets/app.js"></script>
 </body>
 
 </html>
